[project]
name = "gateway-guardian"
version = "0.1.0"
description = "Multi-profile Gateway Guardian supervisor for Hermes and OpenClaw."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gateway-guardian = "gateway_guardian:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
include = [
  "gateway_guardian",
  "scripts/gateway_guardian.py",
]
